--- a/10. ADO.NET/ADO.NET/09-10.MySqlDB/App.config
+++ b/10. ADO.NET/ADO.NET/09-10.MySqlDB/App.config
@@ -36,4 +36,7 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <connectionStrings>
+    <add name="Library" connectionString="Server=localhost; Port=3306;Database=library; Uid = root; Pwd = root; pooling = true"/>
+  </connectionStrings>
 </configuration>
