--- a/11. Entity Framework/EntityFramework/EmployeeInh/EmployeeInh.csproj
+++ b/11. Entity Framework/EntityFramework/EmployeeInh/EmployeeInh.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F35DFBDB-6309-4BFD-8F16-77BE94C25B46}</ProjectGuid>
+    <ProjectGuid>{BDB4E85C-C72F-459F-8EB5-B827E4A7419E}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DataBaseClone</RootNamespace>
-    <AssemblyName>DataBaseClone</AssemblyName>
+    <RootNamespace>EmployeeInh</RootNamespace>
+    <AssemblyName>EmployeeInh</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,7 +43,6 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
-    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
