--- a/11. Entity Framework/EntityFramework/EntityFrameworkModels/EntityFrameworkModels.csproj
+++ b/11. Entity Framework/EntityFramework/EntityFrameworkModels/EntityFrameworkModels.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data.Linq" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Security" />
     <Reference Include="System.Xml.Linq" />
@@ -84,6 +85,7 @@
     <Compile Include="Employee.cs">
       <DependentUpon>NorthwindModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="EmployeeExtend.cs" />
     <Compile Include="Employee_Sales_by_Country_Result.cs">
       <DependentUpon>NorthwindModel.tt</DependentUpon>
     </Compile>
