--- a/13. Entity Framework Code First/StudentSystem/StudentSystem.ConsoleClient/StudentSystem.ConsoleClient.csproj
+++ b/13. Entity Framework Code First/StudentSystem/StudentSystem.ConsoleClient/StudentSystem.ConsoleClient.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{BDB4E85C-C72F-459F-8EB5-B827E4A7419E}</ProjectGuid>
+    <ProjectGuid>{87553CDB-71D0-4F6C-B306-A4D18E1E88C7}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>EmployeeInh</RootNamespace>
-    <AssemblyName>EmployeeInh</AssemblyName>
+    <RootNamespace>StudentSystem.ConsoleClient</RootNamespace>
+    <AssemblyName>StudentSystem.ConsoleClient</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -44,7 +44,6 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Data.Linq" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -53,7 +52,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="Startup.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -61,9 +60,13 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\EntityFrameworkModels\EntityFrameworkModels.csproj">
-      <Project>{82c141d7-9b31-4e40-8117-c49930e6d244}</Project>
-      <Name>EntityFrameworkModels</Name>
+    <ProjectReference Include="..\StudentSystem.Data\StudentSystem.Data.csproj">
+      <Project>{f445e206-0631-454a-9b8b-efaf6d34c13e}</Project>
+      <Name>StudentSystem.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\StudentSystem.Models\StudentSystem.Models.csproj">
+      <Project>{e6a0b650-91c9-4cb2-a98f-b31508f62389}</Project>
+      <Name>StudentSystem.Models</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
